3.2.1
- Zend Framework was updated to 1.7.1

3.2.0
- P4A is now released under LGPL 3
- P4A_APPLICATION_SOURCE_DOWNLOAD_URL constant was removed (along with the
  "download source" link in the footer)
- P4A_Grid widget was added
- P4A_Simple_Edit_Mask was added to quickly create a simple mask to edit
  a database table
- P4A_Mask_constructSimpleEdit() helper was added to manage the initialization
  of the P4A_Simple_Edit_Mask and to allow you to use that shortcut also
  when not inheriting from P4A_Simple_Edit_Mask
- P4A_Table::showRowIndicator() and hideRowIndicator() methods were added
- P4A_DB_Source::delete() method now supports schemas
- P4A_Sheet's error messages were beautified
- P4A_Thumbnail_Generator now supports transparent GIF/PNG
- P4A_Thumbnail_Generator now outputs a PNG cache file if a PNG
  original file was provided
- P4A_Thumbnail_Generator now outputs a GIF cache file if a GIF
  original file was provided
- P4A_Thumbnail_Generator now resamples JPG/PNG instead of just
  resizing them
- a rendering bug with P4A_Field (when set as label) was fixed
- translations were updated
- white-space: nowrap was added to P4A_Field's CSS for a better
  webkit/safari/chrome rendering
- P4A_Frame::getChildrenAsString() protected method was added
  to avoid code replication between P4A_Frame and all classes
  inheriting from it
- P4A_Frame::anchorCenter() method' second parameter was removed
  because it was unused and unuseful
- P4A_Frame::anchorCenter() was reworked with some javascript
  code and now correctly supports P4A_Field many other widgets
- some XHTML validation errors were fixed
- default mask/popup templates were changed a bit, fixing a typo
  on #p4a_sidebar_right div and adding #p4a_main div wrapping
  the main zone
- FCKEditor was disabled on Opera because of a bug (user would
  get 2 editors instead of one)
- P4A_Base_Mask::frame does not have a default width anymore
- IE6 PNG Fix is not bound to window's onload event but in our