@@ -1,5 +1,6 @@
 3.2.1
 - Zend Framework was updated to 1.7.1
+- PEAR::Net_Useragent_Detect was updated to 2.5.0
 
 3.2.0
 - P4A is now released under LGPL 3
